Plotting png images on the map is complete. Also fixed the ordering issue (z-index alternative)

--- a/style/general.css
+++ b/style/general.css
@@ -59,4 +59,7 @@ body {
     cursor: pointer;
 }
 
+image {
+    z-index: 1000;
+}
 
